# libfbc

./: CMakeLists.txt  CTestConfig.cmake  README.md
CMake/: FindLIBSBML.cmake
doc/: class_diagram.graphml
doxygen/: CMakeLists.txt  MainPage.dox  doxygen.config.in  header.html
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt
src/bindings/python/: CMakeLists.txt  libfbc.i
src/fbc/: CMakeLists.txt  fbcBoundaryConditionFilter.cxx  fbcBoundaryConditionFilter.hxx  fbcConstraint.cxx  fbcConstraint.hxx  fbcExchangeReactionFilter.cxx  fbcExchangeReactionFilter.hxx  fbcFBAProblem.cxx  fbcFBAProblem.hxx  fbcFlux.cxx  fbcFlux.hxx  fbcFluxes.cxx  fbcFluxes.hxx  fbcLPProblem.cxx  fbcLPProblem.hxx  fbcNonBoundaryConditionFilter.cxx  fbcNonBoundaryConditionFilter.hxx  fbcProblem.cxx  fbcProblem.hxx  fbcReactionFilter.cxx  fbcReactionFilter.hxx  fbcSolution.cxx  fbcSolution.hxx  fbcStoichiometryMatrix.cxx  fbcStoichiometryMatrix.hxx
src/lp_solve_5.5/: CMakeLists.txt
testing/: CMakeLists.txt  FEBS_antimony.xml  TestChangeObjectiveFunction.cxx  TestChangeObjectiveSense.cxx  TestExchangeFluxAPI.cxx  TestFluxAPI.cxx  TestFluxVectorSizes.cxx  TestLPthroughSBML.xml  TestSetFluxBound.cxx  TestSetPreSolveSettings.cxx  TestSolveFromLPFile.cxx  TestSolveFromSBMLFile.cxx  TestSolveFromSBMLString.cxx  TestSolveFromSBMLandLPFile.cxx  TestSolveFromSBMLandLPFile.cxx.in  TestUnsetFluxBound.cxx  test.lp
