FIND_PACKAGE(SWIG 2.0 REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonInterp 2.7 REQUIRED)
FIND_PACKAGE(PythonLibs 2.7 REQUIRED)

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${FBC_SOURCE_DIR})
INCLUDE_DIRECTORIES(${LPSOLVE_SOURCE_DIR})

IF(NOT PYTHON_PACKAGE_INSTALL_DIR)
  # Python wrappers installed in user site by default
  execute_process(
    COMMAND "${PYTHON_EXECUTABLE}" -c "import sys;import site;sys.stdout.write(site.USER_SITE)"
    OUTPUT_VARIABLE PYTHON_PACKAGE_INSTALL_DIR)
ENDIF()

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(libfbc.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE(libfbc python libfbc.i ${LIBFBC_SOURCES})
SWIG_LINK_LIBRARIES(libfbc fbc ${LIBSBML_LIBRARY} ${PYTHON_LIBRARIES})

INSTALL(TARGETS ${SWIG_MODULE_libfbc_REAL_NAME} DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR}/libfbc)

file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/libfbc.pth" "libfbc\n")
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libfbc.pth DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR})
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libfbc.py DESTINATION ${PYTHON_PACKAGE_INSTALL_DIR}/libfbc)
